# SafeOperations

./: .gitignore  CMakeLists.txt  Readme.md
include/: SafeOps.h
src/: SafeOps.c
tests/: test_SafeOps.c
